--- a/portfolio.html
+++ b/portfolio.html
@@ -56,5 +56,7 @@
 		<footer>
 			Copyright Tom Williams 2020
 		</footer>
+
+		<script type="text/javascript" src="js/portfolio.js"></script>
 	</body>
 </html>
