Removed unused or unneeded pages
Removed "cv.html" and references, as well as test files

--- a/index.html
+++ b/index.html
@@ -1,34 +1,2 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<link rel="stylesheet" type="text/css" href="desktop.css">
-		<link href="https://fonts.googleapis.com/css?family=Comfortaa|Roboto&display=swap" rel="stylesheet">
-
-		<title>Tom Williams | Home</title>
-	</head>
-
-	<body>
-		<header>
-			<h1>Tom Williams</h1>
-			<h2>Portfolio Website</h2>
-		</header>
-
-		<div id="middle">
-			<nav id="sidebar">
-				<a href="profile.html">Profile</a>
-				<a href="cv.html">My CV</a>
-				<a href="portfolio.html">Portfolio</a>
-				<a href="contact.html">Contact</a>
-			</nav>
-
-			<main>
-				<h3>Content goes here</h3>
-				Lorem ipsum
-			</main>
-		</div>
-
-		<footer>
-			Copyright Tom Williams 2020
-		</footer>
-	</body>
-</html>
+<meta http-equiv="refresh" content="0; URL=https://chillpenguin1993.github.io/profile.html">
