Added thumbains to portfolio list
Made some thumbnails, displaying them on the list.
Also made a placeholder page for portfolio items.

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,30 +23,30 @@
 			<main>
 				<h3>Portfolio</h3>
 				<ul id="portfolio_list">
-					<li class="portfolio_item"><a href="portfolio.html"><div>
+					<li class="portfolio_item"><a href="portfolio/portfolio_empty.html"><div>
 						<h4>Penguin Game [WIP]</h4>
 						Long-term GameMaker project with a lot of interesting technical challenges. This project shows my problem solving skills.
-						<img src="Blank16by9.png">
+						<img src="images/portfolio/thumb_penguin.png">
 					</div><a></li>
-					<li class="portfolio_item"><a href="portfolio.html"><div>
+					<li class="portfolio_item"><a href="portfolio/portfolio_empty.html"><div>
 						<h4>SFML/C++ 2D Shmup</h4>
 						Somewhat unfinished since we switched to use DirectX instead during the assignment, this project shows off my C++ knowledge.
-						<img src="Blank16by9.png">
+						<img src="images/portfolio/thumb_sfml.png">
 					</div><a></li>
-					<li class="portfolio_item"><a href="portfolio.html"><div>
+					<li class="portfolio_item"><a href="portfolio/portfolio_empty.html"><div>
 						<h4>DirectX 11 "Game Engine" [WIP]</h4>
 						A work in progress, one assignment this year was to make a game using DX11. I'm trying for something a bit more ambitious!
-						<img src="Blank16by9.png">
+						<img src="images/portfolio/thumb_engine.png">
 					</div><a></li>
-					<li class="portfolio_item"><a href="portfolio.html"><div>
+					<li class="portfolio_item"><a href="portfolio/portfolio_empty.html"><div>
 						<h4>Behind Locked Doors</h4>
 						2nd year "game jam" style group project, made together with another programmer and 3 artists over the course of a week and a half.
-						<img src="Blank16by9.png">
+						<img src="images/portfolio/thumb_bld.png">
 					</div><a></li>
-					<li class="portfolio_item"><a href="portfolio.html"><div>
+					<li class="portfolio_item"><a href="portfolio/portfolio_empty.html"><div>
 						<h4>Year 1 Unity Assignment</h4>
 						My submission for an assignment to make a simple game. It's a bit clumsy to play, but I'm proud of the diversity of the enemies!
-						<img src="Blank16by9.png">
+						<img src="images/portfolio/thumb_firstyear.png">
 					</div><a></li>
 				</ul>
 			</main>
