fixed a spelling mistake (:

--- a/portfolio/portfolio_empty.html
+++ b/portfolio/portfolio_empty.html
@@ -26,7 +26,7 @@
                 I've got a lot to do, and this is on the list, but assignments and applications are all
                  happening at the same time and I had to get this website ready on quite short notice.
                   I'll write this as soon as possible, so maybe check back in a bit :)<br>
-                Alternatively, if you think this is a mistake (or you just want to know when I'll be written),
+                Alternatively, if you think this is a mistake (or you just want to know when it'll be written),
                  feel free to get in contact. Details are in the contact page on the sidebar!
 			</main>
 		</div>
