Filled out information for profile page

--- a/profile.html
+++ b/profile.html
@@ -21,8 +21,17 @@
 			</nav>
 
 			<main>
-				<h3>Profile</h3>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				<h3>About Me</h3>
+				My name is Tom Williams, I'm studying Computer Science for Games at Sheffield Hallam University, currently in the second year.
+				<br><br>
+				Ever since playing around with Scratch on a loud, dusty laptop when I was young, I knew game development was my passion. For the time
+				being, I'm trying to work on game concepts that excite me in my spare time in addition to my studies at university, but I'd really love
+				to pursue game development as a career.
+				<br><br>
+				The main project I've been working on is the Penguin Game (check it out in my portfolio!), which started as a little experiment with a
+				pseudo-3D effect in GameMaker, and has gradually evolved and soon I hope to be able to publish the full game it's becoming! The other
+				project I'm actively working on is a simple game engine, made in C++ with DirectX 11, but that was started much more recently so
+				unfortunately there isn't a lot to show yet.
 			</main>
 		</div>
 
