Filled out information for contact page

--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,11 @@
 
 			<main>
 				<h3>Contact Me</h3>
-				Lorem ipsum
+				My email address:<br>
+				tomwilliamsdev@gmail.com<br><br>
+				<a href="https://github.com/ChillPenguin1993/">Link to my GitHub profile</a>
+				<br><br>
+				<a href="https://www.linkedin.com/in/tom-williams-29582119b/">Link to my LinkedIn profile</a>
 			</main>
 		</div>
 
