Corrected video position in wide windows
Previously if there was enough space, the video would be inline with the above text.

--- a/portfolio/penguin.html
+++ b/portfolio/penguin.html
@@ -26,7 +26,7 @@
                 and is going to be a somewhat relaxed metroidvania. I'm hoping to finish and release it soon, though I've been very busy with
                 assignments recently.</p>
 
-                <p class="center">This video shows a bit of the game in lieu of an actual trailer :)
+                <p class="center">This video shows a bit of the game in lieu of an actual trailer :)<br>
                 <iframe width="480" height="360" frameBorder="0"
                     src="https://www.youtube.com/embed/50h9gaIIEjo">
                 </iframe></p>
