--- a/portfolio/sfml-shmup.html
+++ b/portfolio/sfml-shmup.html
@@ -26,7 +26,7 @@
                 library, for simplicity, and we're in the process of learning to use DirectX 11. This is the SFML version of my game, as the DirectX
                 version is not ready yet, but this is recent enough to accurately portray my C++ skills.</p>
 
-                <p class="center">This is the most recent progress update, it still features some placeholder assets.
+                <p class="center">This is the most recent progress update, it still features some placeholder assets.<br>
                 <iframe width="480" height="270" frameBorder="0"
                     src="https://www.youtube.com/embed/rkKCt_I7dC8">
                 </iframe></p>
