Added content for the DirectX Game Engine page

--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
 						Somewhat unfinished since we switched to use DirectX instead during the assignment, this project shows off my C++ knowledge.
 						<img src="images/portfolio/thumb_sfml.png">
 					</div><a></li>
-					<li class="portfolio_item"><a href="portfolio/empty.html"><div>
+					<li class="portfolio_item"><a href="portfolio/engine.html"><div>
 						<h4>DirectX 11 "Game Engine" [WIP]</h4>
 						A work in progress, one assignment this year was to make a game using DX11. I'm trying for something a bit more ambitious!
 						<img src="images/portfolio/thumb_engine.png">
