All pages now use mobile first design

--- a/portfolio/empty.html
+++ b/portfolio/empty.html
@@ -3,7 +3,7 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="../desktop.css">
 		<link href="https://fonts.googleapis.com/css?family=Comfortaa|Roboto&display=swap" rel="stylesheet">
-
+		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
 		<title>Tom Williams | Profile</title>
 	</head>
 
