Added JS Sokoban from WAD assignment
Added the images, html and js from the assignment.
Modified the portfolio so there's a link to the page, as well as the css

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,27 +27,32 @@
 						<h4>Penguin Game [WIP]</h4>
 						Long-term GameMaker project with a lot of interesting technical challenges. This project shows my problem solving skills.
 						<img src="images/portfolio/thumb_penguin.png">
-					</div><a></li>
+					</div></a></li>
 					<li class="portfolio_item"><a href="portfolio/sfml-shmup.html"><div>
 						<h4>SFML/C++ 2D Shmup</h4>
 						Somewhat unfinished since we switched to use DirectX instead during the assignment, this project shows off my C++ knowledge.
 						<img src="images/portfolio/thumb_sfml.png">
-					</div><a></li>
+					</div></a></li>
 					<li class="portfolio_item"><a href="portfolio/engine.html"><div>
 						<h4>DirectX 11 "Game Engine" [WIP]</h4>
 						A work in progress, one assignment this year was to make a game using DX11. I'm trying for something a bit more ambitious!
 						<img src="images/portfolio/thumb_engine.png">
-					</div><a></li>
+					</div></a></li>
+					<li class="portfolio_item"><a href="portfolio/sokoban.html"><div>
+						<h4>JS Sokoban Game</h4>
+						Part of an assignment for the web dev module, it's a simple game made to demonstrate my JavaScript knowledge.
+						<img src="images/portfolio/thumb_sokoban.png">
+					</div></a></li>
 					<li class="portfolio_item"><a href="portfolio/empty.html"><div>
 						<h4>Behind Locked Doors</h4>
 						2nd year "game jam" style group project, made together with another programmer and 3 artists over the course of a week and a half.
 						<img src="images/portfolio/thumb_bld.png">
-					</div><a></li>
+					</div></a></li>
 					<li class="portfolio_item"><a href="portfolio/empty.html"><div>
 						<h4>Year 1 Unity Assignment</h4>
 						My submission for an assignment to make a simple game. It's a bit clumsy to play, but I'm proud of the diversity of the enemies!
 						<img src="images/portfolio/thumb_firstyear.png">
-					</div><a></li>
+					</div></a></li>
 				</ul>
 			</main>
 		</div>
