Changed the video to remain up to date with current progress

--- a/portfolio/engine.html
+++ b/portfolio/engine.html
@@ -29,7 +29,7 @@
 
                 <p class="center">Here's the latest video of progress on the engine:<br>
                 <iframe width="480" height="270" frameBorder="0"
-                    src="https://www.youtube.com/embed/i36cG2USaIE">
+                    src="https://www.youtube.com/embed/3SGOViQ_uI8">
                 </iframe></p>
 
                 <p>The main inspiration for this engine comes from Godot, which is often compared to Unity, though there are some differences. Unity
